[FIX] Wrap flex items of the social media

--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,7 @@ body {
 
 address {
   display: flex;
+  flex-wrap: wrap;
   gap: 10px;
 }
 
@@ -61,4 +62,13 @@ address > * {
 .summary {
   margin-block: 20px;
   font-size: 0.8rem;
+}
+
+/* Media Queries */
+
+@media screen and (width <= 768px) {
+  .wrapper {
+    flex-direction: column;
+    width: 80vw;
+  }
 }
